--- a/Blockchain_Simulator_App/MainWindow.xaml
+++ b/Blockchain_Simulator_App/MainWindow.xaml
@@ -23,7 +23,7 @@
             <Setter Property="BorderBrush" Value="White" />
             <Setter Property="Background" Value="CadetBlue" />
             <Setter Property="Foreground" Value="#fff"/>
-            <Setter Property="FontFamily" Value="Arial, Verdana, SansSherif"/>
+            <Setter Property="FontFamily" Value="Arial, Verdana"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Medium"/>
             <Setter Property="Padding" Value="2"/>
@@ -33,7 +33,7 @@
         </Style>
         <Style x:Key="mainTitle" TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="FontFamily" Value="Arial, Verdana, SansSherif"/>
+            <Setter Property="FontFamily" Value="Arial, Verdana"/>
             <Setter Property="Foreground" Value="CadetBlue"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -42,7 +42,7 @@
         <Style x:Key="titleText" TargetType="TextBlock">
             <Setter Property="Grid.Column" Value="0"/>
             <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="FontFamily" Value="Arial, Verdana, SansSherif"/>
+            <Setter Property="FontFamily" Value="Arial, Verdana"/>
             <Setter Property="Foreground" Value="CadetBlue"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -52,7 +52,7 @@
             <Setter Property="Grid.Column" Value="1"/>
             <Setter Property="IsReadOnly" Value="true" />
             <Setter Property="BorderBrush" Value="White" />
-            <Setter Property="FontFamily" Value="Arial, Verdana, SansSherif"/>
+            <Setter Property="FontFamily" Value="Arial, Verdana"/>
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="FontWeight" Value="Medium"/>
             <Setter Property="Padding" Value="2"/>
